libmso: Relaxed storage validation in POLE.

There were false positives reported for the invalid file format classification.
Word8 documents to be specific.  Of course those do not follow the Compound
File Binary File Format.

BUG:273176