filters/words/msword-odf/msdoc.h
@@ -23,7 +23,10 @@
 
 enum nFib
 {
-    Word8nFib = 0x00c1,
+    Word2nFib = 0x0063,
+    Word6nFib = 0x0065,
+    Word7nFib = 0x0067,  //also 0x0068
+    Word8nFib = 0x00c1,  //also 0x00c0 and 0x00c2
     Word2knFib = 0x00D9,
     Word2k2nFib = 0x0101,
     Word2k3nFib = 0x010C,
